Bugfixing #6
